Clean up templating